src/test/deca/syntax/valid/inst/test_inst_while_with_braces.deca
// Description:
//    tests de programme syntaxiquement incorrects : boucle while sans {}
//
// Resultats:
//    Hello World!
//    Hello World!
//    Hello World!
//    
//
// Historique:
//    cree le 01/01/2024

{
        int i = 0;
        while (i < 3)
        {
                println("Hello World!");
                i = i + 1;
        }
        
}
