src/test/deca/syntax/invalid/inst/test_inst_while_without_braces.deca
// Description:
//    tests de programme syntaxiquement incorrects : boucle while sans {}
//
// Resultats:
//    Ligne 16: missing '{' at 'println'
//    
//
// Historique:
//    cree le 01/01/2024

{
        int i = 0;
        while (i < 10)
                println("Hello World!");
                i = i + 1;
        
}
